--- a/trino/catalog/warehouse.properties
+++ b/trino/catalog/warehouse.properties
@@ -1,9 +1,10 @@
-connector.name=delta-lake
+connector.name=iceberg
+iceberg.file-format=parquet
+iceberg.max-partitions-per-writer=1000
 hive.metastore.uri=thrift://hive-metastore:9083
-hive.metastore.username=metastore
+hive.metastore.username=hive
 hive.s3.endpoint=http://minio:9000
 hive.s3.aws-access-key=minio
 hive.s3.aws-secret-key=minio123
 hive.s3.path-style-access=true
-delta.enable-non-concurrent-writes=true
-delta.unique-table-location=false
+hive.s3.ssl.enabled=false
