--- a/lakehouse.docker-compose.yml
+++ b/lakehouse.docker-compose.yml
@@ -13,93 +13,8 @@ services:
     volumes:
       - lakehouse-pgdb-volume:/var/lib/postgresql/data
     restart: always
-    # ports:
-    #   - ${PG_PORT}:${PG_PORT}
-
-# volumes:
-#   lakehouse-pgdb-volume:
-#     driver: local
-#     driver_opts:
-#       type: 'none'
-#       o: 'bind'
-#       device: 'C:\\parquet backup'
-
-  trino:
-    container_name: trino
-    image: "trinodb/trino"
-    hostname: trino
     ports:
-      - "8080:8080"
-    volumes:
-      - ./trino:/etc/trino
-
-  metastore_db:
-    image: postgres:11
-    hostname: metastore_db
-    container_name: metastore_db
-    environment:
-      POSTGRES_USER: hive
-      POSTGRES_PASSWORD: hive
-      POSTGRES_DB: metastore
-
-  hive-metastore:
-    container_name: hive-metastore
-    hostname: hive-metastore
-    image: 'starburstdata/hive:3.1.2-e.15'
-    ports:
-      - '9083:9083' # Metastore Thrift
-    environment:
-      HIVE_METASTORE_DRIVER: org.postgresql.Driver
-      HIVE_METASTORE_JDBC_URL: jdbc:postgresql://metastore_db:5432/metastore
-      HIVE_METASTORE_USER: hive
-      HIVE_METASTORE_PASSWORD: hive
-      HIVE_METASTORE_WAREHOUSE_DIR: s3://datalake/
-      S3_ENDPOINT: http://minio:9000
-      S3_ACCESS_KEY: minio
-      S3_SECRET_KEY: minio123
-      S3_PATH_STYLE_ACCESS: "true"
-      REGION: ""
-      GOOGLE_CLOUD_KEY_FILE_PATH: ""
-      AZURE_ADL_CLIENT_ID: ""
-      AZURE_ADL_CREDENTIAL: ""
-      AZURE_ADL_REFRESH_URL: ""
-      AZURE_ABFS_STORAGE_ACCOUNT: ""
-      AZURE_ABFS_ACCESS_KEY: ""
-      AZURE_WASB_STORAGE_ACCOUNT: ""
-      AZURE_ABFS_OAUTH: ""
-      AZURE_ABFS_OAUTH_TOKEN_PROVIDER: ""
-      AZURE_ABFS_OAUTH_CLIENT_ID: ""
-      AZURE_ABFS_OAUTH_SECRET: ""
-      AZURE_ABFS_OAUTH_ENDPOINT: ""
-      AZURE_WASB_ACCESS_KEY: ""
-    depends_on:
-      - metastore_db
-
-  minio:
-    hostname: minio
-    image: 'minio/minio:RELEASE.2022-05-26T05-48-41Z'
-    container_name: minio
-    ports:
-      - '9000:9000'
-      - '9001:9001'
-    environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
-    command: server /data --console-address ":9001"
-
-  # # This job will create the "datalake" bucket on Minio
-  mc-job:
-    image: 'minio/mc:RELEASE.2022-05-09T04-08-26Z'
-    container_name: mc-job
-    entrypoint: |
-      /bin/bash -c "
-      sleep 5;
-      /usr/bin/mc config --quiet host add myminio http://minio:9000 minio minio123;
-      /usr/bin/mc mb --quiet myminio/datalake myminio/warehouse
-      "
-    depends_on:
-      - minio
-
+      - ${PG_PORT}:${PG_PORT}
 
 volumes:
   lakehouse-pgdb-volume:
@@ -109,15 +24,86 @@ volumes:
       o: 'bind'
       device: 'C:\\parquet backup'
 
+#   trino:
+#     container_name: trino
+#     image: "trinodb/trino"
+#     hostname: trino
+#     ports:
+#       - "8080:8080"
+#     volumes:
+#       - ./trino:/etc/trino
 
-# # networks:
-# #   lake_network:
-# #     driver: bridge
-# #     name: lake_network
+#   metastore_db:
+#     image: postgres:11
+#     hostname: metastore_db
+#     container_name: metastore_db
+#     environment:
+#       POSTGRES_USER: hive
+#       POSTGRES_PASSWORD: hive
+#       POSTGRES_DB: metastore
 
+#   hive-metastore:
+#     container_name: hive-metastore
+#     hostname: hive-metastore
+#     image: 'starburstdata/hive:3.1.2-e.15'
+#     ports:
+#       - '9083:9083' # Metastore Thrift
+#     environment:
+#       HIVE_METASTORE_DRIVER: org.postgresql.Driver
+#       HIVE_METASTORE_JDBC_URL: jdbc:postgresql://metastore_db:5432/metastore
+#       HIVE_METASTORE_USER: hive
+#       HIVE_METASTORE_PASSWORD: hive
+#       HIVE_METASTORE_WAREHOUSE_DIR: s3://datalake/
+#       S3_ENDPOINT: http://minio:9000
+#       S3_ACCESS_KEY: minio
+#       S3_SECRET_KEY: minio123
+#       S3_PATH_STYLE_ACCESS: "true"
+#       REGION: ""
+#       GOOGLE_CLOUD_KEY_FILE_PATH: ""
+#       AZURE_ADL_CLIENT_ID: ""
+#       AZURE_ADL_CREDENTIAL: ""
+#       AZURE_ADL_REFRESH_URL: ""
+#       AZURE_ABFS_STORAGE_ACCOUNT: ""
+#       AZURE_ABFS_ACCESS_KEY: ""
+#       AZURE_WASB_STORAGE_ACCOUNT: ""
+#       AZURE_ABFS_OAUTH: ""
+#       AZURE_ABFS_OAUTH_TOKEN_PROVIDER: ""
+#       AZURE_ABFS_OAUTH_CLIENT_ID: ""
+#       AZURE_ABFS_OAUTH_SECRET: ""
+#       AZURE_ABFS_OAUTH_ENDPOINT: ""
+#       AZURE_WASB_ACCESS_KEY: ""
+#     depends_on:
+#       - metastore_db
 
+#   minio:
+#     hostname: minio
+#     image: 'minio/minio:RELEASE.2022-05-26T05-48-41Z'
+#     container_name: minio
+#     ports:
+#       - '9000:9000'
+#       - '9001:9001'
+#     environment:
+#       MINIO_ACCESS_KEY: minio
+#       MINIO_SECRET_KEY: minio123
+#     command: server /data --console-address ":9001"
 
-# # networks:
-# #   airflow:
-# #     external:
-# #       name: dataingestion_default
+#   # # This job will create the "datalake" bucket on Minio
+#   mc-job:
+#     image: 'minio/mc:RELEASE.2022-05-09T04-08-26Z'
+#     container_name: mc-job
+#     entrypoint: |
+#       /bin/bash -c "
+#       sleep 5;
+#       /usr/bin/mc config --quiet host add myminio http://minio:9000 minio minio123;
+#       /usr/bin/mc mb --ignore-existing --quiet myminio/datalake myminio/warehouse
+#       "
+#     depends_on:
+#       - minio
+
+# volumes:
+#   lakehouse-pgdb-volume:
+#     driver: local
+#     driver_opts:
+#       type: 'none'
+#       o: 'bind'
+#       device: 'C:\\parquet backup'
