--- a/dbt-transform/silver/dbt_project.yml
+++ b/dbt-transform/silver/dbt_project.yml
@@ -32,6 +32,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   silver:
-    # Config indicated by + and applies to all files under models/example/
+    +materialized: table
     +file_format: delta
     +location_root: s3a://warehouse/silver
