--- a/trino/catalog/psql.properties
+++ b/trino/catalog/psql.properties
@@ -2,3 +2,4 @@ connector.name=postgresql
 connection-url=jdbc:postgresql://lake_pgdb:5432/lakehouse_db
 connection-user=pgdb_lake
 connection-password=lake1234
+postgresql.include-system-tables=false
