--- a/dbt-transform/bronze/dbt_project.yml
+++ b/dbt-transform/bronze/dbt_project.yml
@@ -31,6 +31,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   bronze:
-    +materialized: table
+    +materialized: incremental
     +file_format: iceberg
     +location_root: s3a://warehouse/bronze
