--- a/dbt-transform/gold/dbt_project.yml
+++ b/dbt-transform/gold/dbt_project.yml
@@ -32,6 +32,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   gold:
-    +materialized: table
+    +materialized: incremental
     +file_format: iceberg
     +location_root: s3a://warehouse/gold
