--- a/dbt-transform/profiles.yml
+++ b/dbt-transform/profiles.yml
@@ -4,7 +4,7 @@ bronze:
     dev:
       type: trino
       user: admin
-      host: localhost
+      host: trino
       port: 8080
       database: warehouse
       schema: bronze
@@ -16,7 +16,7 @@ silver:
     dev:
       type: trino
       user: admin
-      host: localhost
+      host: trino
       port: 8080
       database: warehouse
       schema: silver
@@ -28,7 +28,7 @@ gold:
     dev:
       type: trino
       user: admin
-      host: localhost
+      host: trino
       port: 8080
       database: warehouse
       schema: gold
