--- a/lakehouse.docker-compose.yml
+++ b/lakehouse.docker-compose.yml
@@ -18,14 +18,6 @@ services:
     networks:
       - dataingestion_airflow-net
 
-# volumes:
-#   lakehouse-pgdb-volume:
-#     driver: local
-#     driver_opts:
-#       type: 'none'
-#       o: 'bind'
-#       device: 'C:\\parquet backup'
-
   trino:
     container_name: trino
     image: "trinodb/trino"
@@ -59,7 +51,7 @@ services:
       HIVE_METASTORE_JDBC_URL: jdbc:postgresql://metastore_db:5432/metastore
       HIVE_METASTORE_USER: hive
       HIVE_METASTORE_PASSWORD: hive
-      HIVE_METASTORE_WAREHOUSE_DIR: s3://datalake/
+      HIVE_METASTORE_WAREHOUSE_DIR: s3://warehouse/
       S3_ENDPOINT: http://minio:9000
       S3_ACCESS_KEY: minio
       S3_SECRET_KEY: minio123
@@ -96,8 +88,10 @@ services:
     command: server /data --console-address ":9001"
     networks:
       - dataingestion_airflow-net
+    volumes:
+      - minio_volume:/data
 
-  # # This job will create the "datalake" bucket on Minio
+  # # This job will create the "warehouse" bucket on Minio
   mc-job:
     image: 'minio/mc:RELEASE.2022-05-09T04-08-26Z'
     container_name: mc-job
@@ -105,7 +99,7 @@ services:
       /bin/bash -c "
       sleep 5;
       /usr/bin/mc config --quiet host add myminio http://minio:9000 minio minio123;
-      /usr/bin/mc mb --ignore-existing --quiet myminio/datalake myminio/warehouse
+      /usr/bin/mc mb --ignore-existing --quiet myminio/warehouse
       "
     depends_on:
       - minio
@@ -113,6 +107,7 @@ services:
       - dataingestion_airflow-net
 
 volumes:
+  minio_volume:
   lakehouse-pgdb-volume:
     # driver: local
     # driver_opts:
